<?xml version="1.0" encoding="utf-8"?>
<GridLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".BMI"
    android:columnCount="2"
    android:useDefaultMargins="true">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bmi_header"
        android:textSize="24sp"
        android:layout_columnSpan="2"
        android:layout_row="0"
        android:layout_gravity="center"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bmi_text"
        android:layout_columnSpan="2"
        android:layout_row="1"
        android:layout_gravity="center"/>

    <EditText
        android:id="@+id/weightEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="0"
        android:layout_columnSpan="2"
        android:layout_row="3"
        android:digits="0123456789"
        android:ems="10"
        android:inputType="number"
        android:maxLength="6"/>

    <EditText
        android:id="@+id/heightEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="0"
        android:layout_columnSpan="2"
        android:layout_row="4"
        android:digits="0123456789"
        android:ems="10"
        android:inputType="number"
        android:maxLength="6"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:id="@+id/weightTextView"
        android:layout_row="3"
        android:layout_column="0"
        android:layout_columnSpan="2"
        android:hint="@string/enter_weight"
        android:layout_gravity="fill_horizontal"
        android:background="@color/amount_background"
        android:padding="@dimen/textview_padding"
        android:elevation="@dimen/elevation"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:id="@+id/heightTextView"
        android:layout_row="4"
        android:layout_column="0"
        android:layout_columnSpan="2"
        android:hint="@string/enter_height"
        android:layout_gravity="fill_horizontal"
        android:background="@color/amount_background"
        android:padding="@dimen/textview_padding"
        android:elevation="@dimen/elevation"/>

    <TextView
        android:id="@+id/resultTextView"
        android:layout_width="372dp"
        android:layout_height="wrap_content"
        android:layout_row="5"
        android:layout_column="1"
        android:layout_gravity="fill_horizontal"
        android:background="@color/result_background"
        android:elevation="@dimen/elevation"
        android:gravity="center"
        android:padding="@dimen/textview_padding"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:contentDescription="@string/result"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="16dp"
        android:layout_gravity="fill"
        android:visibility="gone" />

    <Button
        android:id="@+id/returnButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_row="6"
        android:layout_columnSpan="2"
        android:text="@string/return_to_start" />

</GridLayout>
